--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body,html {
 }
 
 .key {
-  border: .4rem solid black;
+  border: .4rem solid #232EF2;
   border-radius: .5rem;
   margin: 1rem;
   font-size: 1.5rem;
@@ -32,9 +32,9 @@ body,html {
 }
 
 .playing {
-  transform: scale(1.1);
-  border-color: #ffc600;
-  box-shadow: 0 0 1rem #ffc600;
+  transform: scale(1.5);
+  border-color: #00ffea;
+  box-shadow: 0 0 1rem #00ffea;
 }
 
 kbd {
@@ -46,5 +46,5 @@ kbd {
   font-size: 1.2rem;
   text-transform: uppercase;
   letter-spacing: .1rem;
-  color: #ffc600;
+  color: #00ffea;
 }
